force-app/main/default/objects/Pantalla_Aportes__c/Pantalla_Aportes__c.object-meta.xml
<CustomObject>
    <label>Pantalla Aportes</label>
    <nameField>
        <label>Nombre de Pantalla Aportes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pantalla Aportess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>