force-app/main/default/objects/Pantalla_Aportes__c/fields/Aplica_Comision_SI__c.field-meta.xml
<CustomField>
    <fullName>Aplica_Comision_SI__c</fullName>
    <label>Aplica Comision SI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>