force-app/main/default/objects/Pantalla_Aportes__c/fields/Codigo_Referencia_Rez__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Referencia_Rez__c</fullName>
    <label>Codigo Referencia Rez</label>
    <length>40</length>
    <type>Text</type>
</CustomField>