force-app/main/default/objects/Pantalla_Aportes__c/fields/Codigo_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Usuario__c</fullName>
    <label>Codigo Usuario</label>
    <length>25</length>
    <type>Text</type>
</CustomField>