force-app/main/default/objects/Pantalla_Aportes__c/fields/Comprobante_imagen__c.field-meta.xml
<CustomField>
    <fullName>Comprobante_imagen__c</fullName>
    <label>Comprobante imagen</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>