force-app/main/default/objects/Pantalla_Aportes__c/fields/cuenta__c.field-meta.xml
<CustomField>
    <fullName>cuenta__c</fullName>
    <label>cuenta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>