force-app/main/default/objects/Pantalla_Aportes__c/fields/Estado_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aporte__c</fullName>
    <description>El estado es &apos;A&apos;  o &apos;D&apos; A = &apos;Aprobada&apos;  D = &apos;Denegada&apos;</description>
    <label>Estado Aporte</label>
    <length>1</length>
    <type>Text</type>
</CustomField>