force-app/main/default/objects/Pantalla_Aportes__c/fields/Etiqueta_Forma_Pago__c.field-meta.xml
<CustomField>
    <fullName>Etiqueta_Forma_Pago__c</fullName>
    <description>Este campo almacenera el nombre completo de la forma de pago.</description>
    <label>Etiqueta Forma Pago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>