force-app/main/default/objects/Pantalla_Aportes__c/fields/Fecha_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Deposito__c</fullName>
    <label>Fecha Deposito</label>
    <type>Date</type>
</CustomField>