force-app/main/default/objects/Pantalla_Aportes__c/fields/Fecha_Ingreso_Sistema__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso_Sistema__c</fullName>
    <description>Fecha del dia en que se ingreso al sistema.</description>
    <label>Fecha Ingreso Sistema</label>
    <type>DateTime</type>
</CustomField>