force-app/main/default/objects/Pantalla_Aportes__c/fields/Forma_PagoN__c.field-meta.xml
<CustomField>
    <fullName>Forma_PagoN__c</fullName>
    <label>Forma PagoN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AH</fullName>
                <label>Cuenta Ahorro</label>
            </value>
            <value>
                <fullName>CK</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Interbanca</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <label>Movil</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Planilla</label>
            </value>
            <value>
                <fullName>TA</fullName>
                <label>Tarjeta</label>
            </value>
            <value>
                <fullName>TL</fullName>
                <label>Talonario</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Traslado Interno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>