force-app/main/default/objects/Pantalla_Aportes__c/fields/Monto_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Calculado__c</fullName>
    <label>Monto Calculado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>