force-app/main/default/objects/Pantalla_Aportes__c/fields/Monto_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Monto_Deposito__c</fullName>
    <label>Monto Deposito</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>