force-app/main/default/objects/Pantalla_Aportes__c/fields/No_Aplica_Comision__c.field-meta.xml
<CustomField>
    <fullName>No_Aplica_Comision__c</fullName>
    <label>No Aplica Comisión</label>
    <length>1</length>
    <type>Text</type>
</CustomField>