force-app/main/default/objects/Pantalla_Aportes__c/fields/Numero_Correlativo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Correlativo__c</fullName>
    <displayFormat>A-{00000000}</displayFormat>
    <label>Numero Correlativo</label>
    <type>AutoNumber</type>
</CustomField>