force-app/main/default/objects/Pantalla_Aportes__c/fields/Oficial_de_negocios__c.field-meta.xml
<CustomField>
    <fullName>Oficial_de_negocios__c</fullName>
    <description>Usuario del oficial de negocio que ingresa el aporte.</description>
    <label>Oficial de negocios</label>
    <length>15</length>
    <type>Text</type>
</CustomField>