force-app/main/default/objects/Pantalla_Aportes__c/fields/Periodo_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Aporte__c</fullName>
    <description>periodo del aporte, si la frecuencia de pago es quincenal o semanal u otro el formato es YYYYMMDD, si es quincenal se verifica que exista 2 pagos por mes el día 1 y 15, si semanal se verifica que exista un pago por semana cada lunes, si la frecuencia es otro se acepta aportes en cualquier día, cualquier otra frecuencia el formato es YYYYMM00 y corresponde al mes en el que se realiza el aporte, ejemplo si el primer aporte es el 20150100 corresponde a un aporte del mes de enero del 2015, si la frecuencia es semestral el próximo aporte sería 20150600.</description>
    <label>Periodo Aporte</label>
    <length>8</length>
    <type>Text</type>
</CustomField>