force-app/main/default/objects/Pantalla_Aportes__c/fields/Rezago__c.field-meta.xml
<CustomField>
    <fullName>Rezago__c</fullName>
    <label>Rezago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>