force-app/main/default/objects/Pantalla_Aportes__c/fields/Tasa__c.field-meta.xml
<CustomField>
    <fullName>Tasa__c</fullName>
    <label>Tasa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>