force-app/main/default/objects/Pantalla_Aportes__c/fields/Tipo_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Moneda__c</fullName>
    <label>Tipo Moneda</label>
    <length>12</length>
    <type>Text</type>
</CustomField>