force-app/main/default/objects/Pantalla_Aportes__c/fields/TIPO_SALDO__c.field-meta.xml
<CustomField>
    <fullName>TIPO_SALDO__c</fullName>
    <label>TIPO SALDO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>