force-app/main/default/objects/Pantalla_Aportes__c/fields/Tipo_SaldoN__c.field-meta.xml
<CustomField>
    <fullName>Tipo_SaldoN__c</fullName>
    <label>Tipo SaldoN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Personal Ordinario</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Personal Extraordinario</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Patronal Ordinario</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Patronal Extraordinario</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Seguro de Vida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>