force-app/main/default/objects/Pantalla_Aportes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Codigo_Referencia__c</columns>
    <columns>Estado_Aporte__c</columns>
    <columns>Periodo_Aporte__c</columns>
    <columns>cuenta__c</columns>
    <columns>Monto_Deposito__c</columns>
    <columns>Fecha_Deposito__c</columns>
    <columns>Tipo_SaldoN__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <sharedTo>
        <role>Asesor_Servicio_Cliente</role>
        <role>Oficial_de_Operaciones_Back_Office</role>
    </sharedTo>
</ListView>