force-app/main/default/objects/Pantalla_Aportes__c/listViews/Carga_de_Aportes.listView-meta.xml
<ListView>
    <fullName>Carga_de_Aportes</fullName>
    <columns>Codigo_Referencia__c</columns>
    <columns>Periodo_Aporte__c</columns>
    <columns>cuenta__c</columns>
    <columns>Monto_Deposito__c</columns>
    <columns>Fecha_Deposito__c</columns>
    <columns>Tipo_SaldoN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Oficial_de_negocios__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado_Aporte__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>Carga de Aportes</label>
    <sharedTo>
        <role>Oficial_de_Operaciones_Back_Office</role>
    </sharedTo>
</ListView>